--- a/eala_cnn_cifar10.ipynb
+++ b/eala_cnn_cifar10.ipynb
@@ -133,13 +133,7 @@
       "Epoch 42/100\n",
       "1562/1562 [==============================] - 20s 13ms/step - loss: 0.7668 - acc: 0.7354 - val_loss: 0.6891 - val_acc: 0.7722\n",
       "Epoch 43/100\n",
-      "1562/1562 [==============================] - 20s 13ms/step - loss: 0.7706 - acc: 0.7342 - val_loss: 0.6578 - val_acc: 0.7759\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1562/1562 [==============================] - 20s 13ms/step - loss: 0.7706 - acc: 0.7342 - val_loss: 0.6578 - val_acc: 0.7759\n",
       "Epoch 44/100\n",
       "1562/1562 [==============================] - 19s 12ms/step - loss: 0.7676 - acc: 0.7368 - val_loss: 0.6954 - val_acc: 0.7697\n",
       "Epoch 45/100\n",
